Multiplatform finalization